# vggt-dataset-builder

./: .copilot-instructions.md  .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  __init__.py  aitoolkit-dataset.py  build_warp_dataset.py  dataset_utils.py  debug_check.py  hole_filling_renderer.py  modelscope-dataset.py  modelscope.py  pyproject.toml  requirements.txt  test_triplet_detection.py  vggt_comfy_nodes.py  vggt_point_cloud_viewer.py
.jules/: bolt.md  docu.md  dryer.md  readme.md  refactor.md  testify.md
shaders/: copy.frag  downsample.frag  hpr.frag  jfa_distance_mask.frag
tests/: README.md  __init__.py  conftest.py  render_smoke.py  test_bidirectional.py  test_cache_smoke.py  test_sky_filter.py  test_triplet_detection.py  test_validate_image.py  test_viewer_smoke.py
tests/input-img/01/: IMG_6635.HEIC  IMG_6636.HEIC
web/js/: vggt_dynamic_inputs.js  vggt_viewer.js
